--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #1a1a1a;
+  --foreground: #ffffff;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -13,12 +13,10 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
+  margin: 0;
+  padding: 8px;
+  background-color: var(--background);
   color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
